--- a/AnındaKapında.MVC/AnındaKapında.MVC.csproj
+++ b/AnındaKapında.MVC/AnındaKapında.MVC.csproj
@@ -12,4 +12,8 @@
     <Folder Include="wwwroot\styles\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
